--- a/src/components/Map/Map.module.css
+++ b/src/components/Map/Map.module.css
@@ -1,5 +1,5 @@
 .map_wrapper {
-    padding : 25px
+    padding : 25px 25px
 }
 
 .map_header {
